Integrate fail-closed Windows directory sync and recovery gates